--- a/Frontend/RNAwesomeProjectNative/package.json
+++ b/Frontend/RNAwesomeProjectNative/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
+    "react-devtools": "react-devtools",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "jest"
   },
   "dependencies": {
@@ -13,7 +16,12 @@
   "devDependencies": {
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react-native": "^3.2.1",
     "jest": "23.1.0",
+    "react-devtools": "^3.2.3",
+    "react-native-cli": "^2.0.1",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
